# fastapi_13hw

./: docker-compose.yml  main.py  pyproject.toml  readme.md
migrations/: env.py
migrations/versions/: 0a79e8292ff8_role_add_user.py  12b8041f84f7_add_user_confirmed.py  6af3fbd2d65a_add_user_confirmed.py  7b4142b6d663_fitst_migration.py  acb07ba8abe5_add_ut.py  bc6167e5ca47_second_migration.py  cac32fa6a514_add_in.py  f75fc6f88359_3_migration.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16398  16399  16401  16402  16403  16404  16405  16407  16413  16414  16416  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  (+11 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: email_template.html  reset_password.html
