[tool.poetry]
name = "home-work12"
version = "0.1.0"
description = ""
authors = ["Іван Лубик <126516121+ivanlubyk@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "home_work11"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.1"}
alembic = "^1.11.1"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
libgravatar = "^1.0.4"
fastapi-jwt-auth = "^0.5.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.0.1"
fastapi-mail = "^1.4.1"
cloudinary = "^1.34.0"
redis = "^4.6.0"
fastapi-limiter = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
